# meshgridder

./: .gitignore  LICENSE  README.md  pylintrc  pyproject.toml
script/: check_dr_orientation.py  check_mi_face_values.py  common.py  compare_large_cell_border.py  compare_mc_dda.py  compare_np_mc.py  compare_performance.py  compare_sh_mc.py  profile_cprofile.py  profile_lineprofiler.py  profile_scalene.py  show_convergence.py  show_dda.py  show_relative_error.py
src/meshgridder/: __init__.py  dda.py  dr.py  mc.py  meshgridder.py  mi.py  np.py  numpy.py  sh.py  tf.py  tri.py
test/: common.py  profile_meshgridder.py  test_dda.py  test_dr.py  test_mc.py  test_meshgridder.py  test_mi.py  test_np.py  test_sh.py  test_tri.py  util.py
